@@ -1,3 +1,8 @@
+2002-08-21  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* shimbun/mew-shimbun.el (mew-shimbun-scan): Support Mew 3.0.64
+	or later.
+
 2002-08-15  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* shimbun/shimbun.el (shimbun-retrieve-url): Disable reflesh
